[ticket/17352] Fix overflow of long rank titles on profile page
Users that had very long rank titles would cause the rest of
their profile details to be pushed down below the avatar and
rank details breaking the layout. This change limits the width
of the avatar and rank details.

PHPBB-17352

--- a/phpBB/styles/prosilver/theme/common.css
+++ b/phpBB/styles/prosilver/theme/common.css
@@ -814,6 +814,10 @@ table.info tbody th {
 	max-width: 100%;
 }
 
+.rank-avatar-container {
+	max-width: 20%;
+}
+
 .left-box.profile-details {
 	width: 80%;
 }
